src/Volo/FrontendBundle/Resources/public/css/pages/restaurants.scss
/*
* vendor-listing-page declarations
*/
.restaurant-list {
  .hero-banner-wrapper {
    @include appear-from("screen-md");
  }
}

.restaurants {
  @include make-row();
  margin: 0;

  .restaurants__item__wrapper__time--closed {
    display: none;
  }
}

.restaurants__tool-box {
  @include make-row();
  height: 84px;
  @include appear-from("screen-sm")
}

.restaurants__location {
  @include make-sm-column(10);
  @include make-md-column(6);
  @include make-lg-column(5);
  @extend .pull-right;
  text-align: right;
  height: 84px;
  line-height: 44px;
  padding: $grid-gutter-width;
  padding-left: $space-xs;

  a {
    font-size: $restaurant-font-size;
    display: inline-block;
    margin-left: $space-md;
  }

  span {
    font-size: $restaurant-font-size;
    display: inline-block;
    margin-left: $space-md;
  }
}

.restaurants__item {
  @include make-xs-column(12);
  @include make-sm-column(6);
  @include make-md-column(4);
  @include make-lg-column(3);
  @include set-no-gutter();
  text-align: left;
  @include respond-from("screen-sm") {
    @include set-default-gutter();
    text-align: center;
  }
}

.restaurants__item__wrapper {
  overflow: hidden;
  margin-bottom: $space-sm;
  position: relative;
  @include transition(all 0.1s ease-out);
  @include respond-from("screen-sm") {
    padding-bottom: 12px;
    border-radius: $border-radius-default;
    background-color: $restaurant-bg-color;
    box-shadow: $restaurant-box-shadow;
    top: 0;
    margin-bottom: $grid-gutter-width;

    &:hover {
      box-shadow: $restaurant-box-shadow-hover;
      top: -5px;
      cursor: pointer;
      border-top: none;
    }
  }

  .restaurants__item__preorder {
    display: none;
  }
}

.restaurants__item__wrapper__picture {
  height: 150px;
  overflow: hidden;
  position: relative;
  @include respond-from("screen-sm") {
    height: auto;
  }
}

.restaurant__image {
    @include responsive-img();
}

.restaurants__item__wrapper__name {
  font-size: $restaurant-font-size;
  font-weight: bold;
  color: $color-text-highlight;
  text-transform: uppercase;
  margin: $space-sm 0 0;
  @include set-default-gutter();
  height: 15px;
  line-height: 15px;
  @include text-overflow();

  @include respond-from("screen-sm") {
    height: 20px;
    line-height: 20px;
  }
}

.restaurants__item__wrapper__desc {
  font-size: $restaurant-font-size;
  margin: 0;
  width: 57%;
  float: left;
  height: 20px;
  color: $color-text-secondary;
  @include text-overflow();
  @include set-default-gutter();
  @include respond-from("screen-sm") {
    width: auto;
    float: none;
  }
}

.restaurants__item__wrapper__time {
  @include text-overflow();
  @include set-default-gutter();
  font-size: $restaurant-font-size;
  margin: 0;
  height: 20px;
  color: $color-text-secondary;
  float: right;
  @include respond-from("screen-sm") {
    float: none;
  }

  .icon-delivery {
    font-size: 0.8em;
    height: 1.2em;
    vertical-align: middle;
    display: inline-block;
  }
}

.restaurants--closed {

  .restaurants__item__preorder {
    width: 100%;
    text-align: center;
    position: absolute;
    color: $color-text-selection;
    z-index: 9995;
    display: block;
    @include vertical-center-absolute();
  }

  .icon-preorder {
    margin: 0 auto $space-sm;
    display: inline-block;
    font-size: 1.7em;
  }

  .item__preorder__label {
    text-align: center;
    text-transform: uppercase;
    display: block;
  }

  .restaurants__item__wrapper__picture {
    background-color: #000;
  }

  .restaurant__image {
    opacity: 0.5;
  }

  .restaurants__item__wrapper__time {
      display: none;
  }

  .restaurants__item__wrapper__time--closed {
    @extend .restaurants__item__wrapper__time;
    display: block;
  }

}

